# RIO

./: .gitignore  CMakeLists.txt  README.md  io-config.h.in  io-mpi.c  io-posix.c  io-serialize.c  io.c  io.h  partitions.gv  specs.md  test.c
